fix: add gap between label and dropdown

--- a/src/components/common/MainnetLabel/MainnetLabel.module.css
+++ b/src/components/common/MainnetLabel/MainnetLabel.module.css
@@ -21,7 +21,7 @@
   }
   
   .labelMenu {
-    top: 100%;
+    top: 120%;
     left: 0;
     width: 100%;
   }
